--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,34 @@
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "5.3.0"
+    id 'io.qameta.allure' version '2.8.1'
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
+group 'ru.netology'
+version '1.0-SNAPSHOT'
+
+sourceCompatibility = 11
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
+allure {
+    autoconfigure = true
+}
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'io.qameta.allure:allure-selenide:2.13.6'
+    testImplementation 'com.codeborne:selenide:5.3.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
+    testImplementation 'mysql:mysql-connector-java:8.0.19'
+    testImplementation 'postgresql:postgresql:9.1-901.jdbc4'
 }
 
 test {
     useJUnitPlatform()
+    systemProperty 'sut.url', System.getProperty('sut.url',"http://localhost:8080")
 }
