--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,18 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
     testImplementation 'mysql:mysql-connector-java:8.0.19'
     testImplementation 'postgresql:postgresql:9.1-901.jdbc4'
+    testImplementation 'commons-dbutils:commons-dbutils:1.7'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.rest-assured:rest-assured:4.3.0'
+    implementation 'com.github.taymindis:JavaHelper:1.0.5'
 }
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'db.url', System.getProperty('db.url')
+    systemProperty 'db.user', System.getProperty('db.user', "app")
+    systemProperty 'db.password', System.getProperty('db.password', "pass")
     systemProperty 'sut.url', System.getProperty('sut.url',"http://localhost:8080")
 }
