--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
-version: '3'
+version: '3.8'
 services:
-  node-app:
-    build: gate-simulator
-    image: node-app:1.0
-    ports:
-      - '9999:9999'
   mysql:
-    image: mysql:8.0.19
-    restart: always
+    image: mysql:8.0
+    cap_add:
+      - SYS_NICE  # CAP_SYS_NICE
     ports:
       - '3306:3306'
     environment:
@@ -15,14 +11,15 @@ services:
       - MYSQL_DATABASE=app
       - MYSQL_USER=app
       - MYSQL_PASSWORD=pass
-
-  postgres:
-    image: postgres:12-alpine
-    restart: always
+  postgresql:
+    image: postgres
     ports:
-      - "5432:5432"
+      - '5432:5432'
     environment:
-      - POSTGRES_RANDOM_ROOT_PASSWORD=yes
       - POSTGRES_DB=app
       - POSTGRES_USER=app
       - POSTGRES_PASSWORD=pass
+  node-app:
+    build: ./gate-simulator
+    ports:
+      - '9999:9999'
