--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'io.qameta.allure:allure-selenide:2.13.6'
+    testImplementation 'io.qameta.allure:allure-selenide:2.13.3'
     testImplementation 'com.codeborne:selenide:5.3.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
     testImplementation 'mysql:mysql-connector-java:8.0.19'
@@ -31,6 +31,8 @@ dependencies {
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'io.rest-assured:rest-assured:4.3.0'
     implementation 'com.github.taymindis:JavaHelper:1.0.5'
+    testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.30'
+
 }
 
 test {
