--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,21 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "5.3.0"
-    id 'io.qameta.allure' version '2.8.1'
+    id 'io.freefair.lombok' version '8.1.0'
+    id'io.qameta.allure' version '2.11.2'
 }
 
-group 'ru.netology'
-version '1.0-SNAPSHOT'
+group = 'org.example'
+version = '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
-compileJava.options.encoding = "UTF-8"
-compileTestJava.options.encoding = "UTF-8"
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
 
-allure {
-    autoconfigure = true
+allure{
+    version='2.16.1'
+    useJUnit5{
+        version='2.16.1'
+    }
 }
 
 repositories {
@@ -21,25 +24,23 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'io.qameta.allure:allure-selenide:2.13.3'
-    testImplementation 'com.codeborne:selenide:5.3.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
-    testImplementation 'mysql:mysql-connector-java:8.0.19'
-    testImplementation 'postgresql:postgresql:9.1-901.jdbc4'
-    testImplementation 'commons-dbutils:commons-dbutils:1.7'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    testImplementation 'org.postgresql:postgresql:42.6.0'
+    testImplementation 'io.qameta.allure:allure-selenide:2.16.1'
+    testImplementation 'mysql:mysql-connector-java:8.0.30'
     testImplementation 'io.rest-assured:rest-assured:4.3.0'
-    implementation 'com.github.taymindis:JavaHelper:1.0.5'
-    testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.30'
-
+    testImplementation 'commons-dbutils:commons-dbutils:1.7'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'com.codeborne:selenide:6.17.2'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
 }
+
 
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
     systemProperty 'db.url', System.getProperty('db.url')
-    systemProperty 'db.user', System.getProperty('db.user', "app")
-    systemProperty 'db.password', System.getProperty('db.password', "pass")
-    systemProperty 'sut.url', System.getProperty('sut.url',"http://localhost:8080")
+    systemProperty 'db.user', System.getProperty('db.user', 'app')
+    systemProperty 'db.password', System.getProperty('db.password', 'pass')
+    systemProperty 'SUT.url', System.getProperty('SUT.url', 'http://localhost:8080/')
 }
